apps/app1-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app1-app 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app1-app
  template:
    metadata:
      labels:
        app: api-app1-app
    spec:
      containers:
      - name: api-app1-app
        image: pertra/express-docker-app-jenkins:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
