apps/app1-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app1-service 
spec:
  selector:
    app: api-app1-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1325
  type: ClusterIP
