apps/app1-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-app1-ingress 
spec:
  ingressClassName: traefik
  rules:
    - host: api-app1-dev.local # To Change
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-app1-app
                port:
                  number: 80
